<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddIncomeActivity">

    <TextView
        android:id="@+id/tv_back_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/add_income"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_back_income" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/background"
        android:src="@drawable/bg_add_expense"
        android:tint="#3E78F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/select_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <com.ssindher11.expangger.HorizontalCalendarView
        android:id="@+id/hcv_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:text="@string/select_date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cancel_income"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_wrong"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fab_cancel_income"
        app:layout_constraintStart_toEndOf="@+id/fab_cancel_income"
        app:layout_constraintTop_toTopOf="@+id/fab_cancel_income" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_income"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/add_income"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_tick"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/fab_cancel_income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/fab_cancel_income" />

</androidx.constraintlayout.widget.ConstraintLayout>