<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingBottom="64dp"
        tools:context=".activities.StatisticsActivity">

        <TextView
            android:id="@+id/tv_back_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_back"
            android:drawablePadding="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/statistics"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_back_stats" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#F1F2F6"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pc_total_stats"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/monthly"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/ts_monthly_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:textToggleCenter="RADAR"
            app:textToggleLeft="BAR"
            app:textToggleRight="LINE"
            app:uncheckedBackgroundColor="@color/white"
            app:uncheckedTextColor="@color/black" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bc_monthly_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_monthly_stats" />

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/rc_monthly_stats"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_monthly_stats" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lc_monthly_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_monthly_stats" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/income_category"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_monthly_stats" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/ts_income_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:textToggleLeft="BAR"
            app:textToggleRight="PIE"
            app:uncheckedBackgroundColor="@color/white"
            app:uncheckedTextColor="@color/black" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bc_income_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_income_stats" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pc_income_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_income_stats" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/expense_category"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bc_income_stats" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/ts_expense_cat_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:textToggleLeft="BAR"
            app:textToggleRight="PIE"
            app:uncheckedBackgroundColor="@color/white"
            app:uncheckedTextColor="@color/black" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bc_expense_cat_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_expense_cat_stats" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pc_expense_cat_stats"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ts_expense_cat_stats" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>